--- a/src/assets/scss/components/_contact.scss
+++ b/src/assets/scss/components/_contact.scss
@@ -6,7 +6,7 @@
 }
 
 .contactFormTitle {
-  font-family: 'Merriweather';
+  font-family: "Merriweather";
   font-weight: 400;
   font-size: 32px;
   line-height: 40px;
@@ -27,21 +27,27 @@
     background: $buttonBgColor;
     box-shadow: 0px 5px 5px rgba(23, 23, 23, 0.1);
     border-radius: 5px;
-    font-family: 'Lato';
+    font-family: "Lato";
     font-weight: 700;
     font-size: 18px;
     line-height: 24px;
     color: $buttonTextColor;
     margin-top: 15px;
+
+    &:hover {
+      cursor: pointer;
+      background-color: $buttonBgColorHover;
+    }
   }
 
-  input, textarea { 
+  input,
+  textarea {
     width: 470px;
     background: $inputBgColor;
     border: 0;
     border-radius: 6px;
     padding: 20px;
-    font-family: 'Lato';
+    font-family: "Lato";
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
