--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -70,6 +70,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
     height: auto;
   }
 }
@@ -83,6 +84,11 @@ header {
   padding-top: 37px;
   max-width: 350px;
 }
+@media (max-width: 767px) {
+  .contentContainer h1 {
+    font-size: 32px;
+  }
+}
 .contentContainer p {
   font-family: "Lato", sans-serif;
   font-size: 19px;
@@ -90,6 +96,11 @@ header {
   color: #555555;
   margin-top: 17.5px;
   max-width: 390px;
+}
+@media (max-width: 767px) {
+  .contentContainer p {
+    font-size: 16px;
+  }
 }
 .contentContainer button {
   font-family: "Lato", sans-serif;
@@ -106,6 +117,12 @@ header {
 .contentContainer button:hover {
   cursor: pointer;
   background-color: #8781f5;
+}
+@media (max-width: 767px) {
+  .contentContainer button {
+    margin-top: 32px;
+    margin-bottom: 50px;
+  }
 }
 @media (max-width: 1024px) {
   .contentContainer {
@@ -145,16 +162,18 @@ header {
   gap: 68px 111px;
   padding: 150px 0;
 }
+@media (max-width: 767px) {
+  .results {
+    gap: 30px;
+    padding: 50px 0;
+  }
+}
 
 .cardWrapper {
   width: 340px;
   height: 423px;
   background-color: #ffffff;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-}
-.cardWrapper:hover {
-  cursor: pointer;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
 
 .cardHeader {
@@ -181,7 +200,22 @@ header {
 
 .contactContainer {
   background-color: #d7d4ff;
-  padding: 80px;
+  padding: 50px;
+}
+@media (max-width: 480px) {
+  .contactContainer input {
+    max-width: 350px;
+  }
+}
+@media (max-width: 480px) {
+  .contactContainer textarea {
+    max-width: 350px;
+  }
+}
+@media (max-width: 480px) {
+  .contactContainer button {
+    max-width: 350px;
+  }
 }
 
 .contactFormTitle {
