--- a/src/styles/scss/components/_header.scss
+++ b/src/styles/scss/components/_header.scss
@@ -12,6 +12,7 @@ header {
 
   @media (max-width: 767px) {
     @include flex(nowrap, column, center, center);
+    width: 100%;
     height: auto;
   }
 }
@@ -25,6 +26,10 @@ header {
     color: $titleColor;
     padding-top: 37px;
     max-width: 350px;
+
+    @media (max-width: 767px) {
+      font-size: 32px;
+    }
   }
 
   p {
@@ -34,6 +39,10 @@ header {
     color: $textColor;
     margin-top: 17.5px;
     max-width: 390px;
+
+    @media (max-width: 767px) {
+      font-size: 16px;
+    }
   }
 
   button {
@@ -51,6 +60,11 @@ header {
     &:hover {
       cursor: pointer;
       background-color: $buttonBgColorHover;
+    }
+
+    @media (max-width: 767px) {
+      margin-top: 32px;
+      margin-bottom: 50px;
     }
   }
 
